<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mm.cook.LoginActivity">






    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_email"
        android:textColor="@color/textColor"
        android:textSize="18dp"
        android:id="@+id/tx1"
        android:layout_alignParentLeft="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/email"
        android:layout_below="@+id/tx1"
        android:textColor="@color/textColor" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_password"
        android:textColor="@color/textColor"
        android:textSize="18dp"
        android:id="@+id/tx2"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/email"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/password"
        android:layout_below="@+id/tx2"
        android:textColor="@color/textColor" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_bn_label"
        android:id="@+id/login_button"
        style="?android:textAppearanceSmall"
        android:textStyle="bold"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/textColor"
        android:textSize="18dp"
        android:id="@+id/sign_up"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/email"
        android:gravity="center"/>


</RelativeLayout>






