<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.mm.cook.RegisterActivity"
   >


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_name"
        android:textColor="@color/textColor"
        android:textSize="18dp"
        android:id="@+id/tx1"
        android:layout_alignParentLeft="true"

        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/reg_name"
        android:layout_below="@+id/tx1"
        android:textColor="@color/textColor" />


    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/prompt_email"
    android:textColor="@color/textColor"
    android:textSize="18dp"
    android:id="@+id/tx2"
    android:layout_alignParentLeft="true"
        android:layout_below="@+id/reg_name"
        android:layout_marginTop="10dp"

    />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/reg_email"
        android:layout_below="@+id/tx2"
        android:textColor="@color/textColor" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_password"
        android:textColor="@color/textColor"
        android:textSize="18dp"
        android:id="@+id/tx3"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/reg_email"
        android:layout_marginTop="10dp"

        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/reg_password"
        android:layout_below="@+id/tx3"
        android:textColor="@color/textColor" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_con_password"
        android:textColor="@color/textColor"
        android:textSize="18dp"
        android:id="@+id/tx4"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/reg_password"
        android:layout_marginTop="10dp"

        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/reg_con_password"
        android:layout_below="@+id/tx4"
        android:textColor="@color/textColor" />





    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_bn_label"
        android:id="@+id/reg_button"
        style="?android:textAppearanceSmall"
        android:textStyle="bold"
        android:layout_below="@+id/reg_con_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"/>





</RelativeLayout>
</LinearLayout>
